--- a/lists/static/jelek.css
+++ b/lists/static/jelek.css
@@ -1,9 +1,9 @@
 #id_new_item {
-    /* kl mau diubah CSS nya gini aja
     position: fixed;
     bottom: 0;
     right: 0;
-    width: 50px; */
+    width: 100px;
     margin-top: 2ex;
+    background-color : orange;
 }
 
