--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -17,6 +17,7 @@
         <div class="col-md-6 col-md-offset-3 jumbotron">
             <div class="text-center">
                 <h1>{% block header_text %}{% endblock %}</h1>
+                {{ comment }}
                 <form method="POST" action="{% block form_action %}{% endblock %}">
                     <input name="item_text" id="id_new_item"
                            class="form-control input-lg"
