--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,6 +1,18 @@
-{% extends 'base.html' %}
+<html>
+    <head>
+        <title> To-Do lists</title>
+    </head>
+    <body>
+        {% extends 'base.html' %}
+        <h1>{% block header_text %}Your To-Do list{% endblock %}</h1>
+        <form method="POST" action="{% block form_action %}/lists/new{% endblock %}">
+            <input name="item_text" id="id_new_item"
+            placeholder="Enter a to-do item"
+            />
+            {% csrf_token %}
+        </form>
+    </body>
+</html>
 
-{% block header_text %}Start a new To-Do list{% endblock %}
 
-{% block form_action %}/lists/new{% endblock %}
 
