--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,8 +1,17 @@
-{% extends 'base.html' %}
+<html>
+    <head>
+        <title>To-Do lists</title>
+    </head>
+    <body>
+         {% extends 'base.html' %}
+         <h1>{% block header_text %}Your To-Do list{% endblock %}</h1>
+         <form method="POST" action="{% block form_action %}/lists/{{ list.id }}/add_item{% endblock %}">
+         <input name="item_text" id="id_new_item" placeholder="enter a to-do item" />
+         
+         <span>{% block comment_text %}{{ comment }}{% endblock %}</span>
+    </body>
+</html>
 
-{% block header_text %}Your To-Do list{% endblock %}
-
-{% block form_action %}/lists/{{ list.id }}/add_item{% endblock %}
 
 {% block table %}
     <table id="id_list_table" class="table">
