--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -5,7 +5,7 @@
     <body>
          {% extends 'base.html' %}
          <h1>{% block header_text %}Your To-Do list{% endblock %}</h1>
-         <form method="POST" action="{% block form_action %}/lists/{{ list.id }}/{% endblock %}">
+         <form method="POST" action="{% block form_action %}{% url 'view_list' list.id %}{% endblock %}">
          <input name="item_text" id="id_new_item" placeholder="enter a to-do item" />
          
          <span>{% block comment_text %}{{ comment }}{% endblock %}</span>
